Fixed easy SonarLint exceptions